# GirlfriendGPT

./: README.md  cli.py  gateway.py  pyproject.toml  setup.cfg  steamship.json
docs/: ENGINEERING_NOTES.md  GIRLFRIENDGPT_SETUP_GUIDE.md  GIRLFRIENDGPT_SUMMARY.md
engineering_notebook/: 001_project_overview.md  002_api_integration_notes.md  003_current_state_analysis.md  004_cli_transformation.md  005_agent_tools_refactoring.md  006_dead_code_cleanup.md  007_gateway_commands.md  README.md
scripts/legacy/: run_websocket.py
src/: __main__.py
src/agent/: __init__.py  agent.py  loop.py
src/agent/tools/: __init__.py  audio_generation.py  base.py  content_writing.py  image_generation.py  social_media.py  video_generation.py
src/gateway/: gateway.py  server.py
ui/utils/: data.py
