[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "girlfriend-gpt"
version = "1.0.0"
description = "GirlfriendGPT - AI Companion Agent with Websocket Gateway"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Enias Cailliau", email = "enias@example.com"}
]
license = {text = "MIT"}

dependencies = [
    # core dependencies: minimal set for SmolAgent+gateway
    "openai>=0.27.0",
    "fastapi>=0.104.0,<0.105.0",
    "websockets>=12.0,<13.0",
    "uvicorn>=0.24.0,<0.25.0",
    "click>=8.0.0,<9.0.0",
    "pydantic>=1.9,<3.0.0",
    "httpx>=0.25.0,<0.26.0",
    "aiohttp>=3.9.0,<4.0.0",
    "textual>=0.40.0,<0.41.0",
]

[project.scripts]
gfgpt = "cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
