[metadata]
name = girlfriend-gpt
version = 1.0.0
author = Enias Cailliau
description = GirlfriendGPT - AI Companion Agent with Websocket Gateway

[options]
packages = find:
python_requires = >=3.8
install_requires =
    openai>=0.27.0
    fastapi>=0.104.0,<0.105.0
    websockets>=12.0,<13.0
    uvicorn>=0.24.0,<0.25.0
    click>=8.0.0,<9.0.0
    pydantic>=1.9,<3.0.0
    httpx>=0.25.0,<0.26.0
    aiohttp>=3.9.0,<4.0.0
    textual>=0.40.0,<0.41.0

[options.entry_points]
console_scripts =
    gfgpt = cli:cli
